--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 
 #title {
     color: #2e2e2b;
+    margin: 0;
+    text-align: center;
 }
 
 .input{
@@ -255,4 +257,18 @@ button:hover {
 
 #sendMessage:hover {
     background-color: #00796b;
+}
+
+.logo-button{
+    position: absolute;
+    left: 20px;
+}
+
+.logo-button:hover {
+    opacity: 0.8;
+}
+
+.logo-button img {
+    width: 50px;
+    height: auto;
 }
