--- a/style_tutor.css
+++ b/style_tutor.css
@@ -60,3 +60,16 @@ body {
     background-color: #FFFCF5;
 }
 
+.logo-button{
+    position: absolute;
+    left: 20px;
+}
+
+.logo-button:hover {
+    opacity: 0.8;
+}
+
+.logo-button img {
+    width: 50px;
+    height: auto;
+}
